<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/vertical_match_linger">
    <RelativeLayout
            style="@style/toolbar_layout">
        <ImageView
                android:id="@+id/return_former"
                style="@style/toolbar_tools"
                android:src="@drawable/left_arraw_icon"/>
        <TextView
                style="@style/toolbar_second_title"
                android:text="@string/my_order_title"/>
    </RelativeLayout>
    <RadioGroup
            android:id="@+id/head_navigation"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/shape_text_line">
        <RadioButton
                android:id="@+id/wait_pay_page"
                style="@style/tab_head_navigate"
                android:text="@string/wait_pay"/>
        <RadioButton
                android:id="@+id/wait_send_page"
                style="@style/tab_head_navigate"
                android:text="@string/wait_send"/>
        <RadioButton
                android:id="@+id/wait_receive_page"
                style="@style/tab_head_navigate"
                android:text="@string/wait_receive"/>
        <RadioButton
                android:id="@+id/wait_remark_page"
                style="@style/tab_head_navigate"
                android:text="@string/wait_remark"/>
        <RadioButton
                android:id="@+id/wait_refund_page"
                style="@style/tab_head_navigate"
                android:text="@string/wait_refund"/>
    </RadioGroup>
    <android.support.v4.view.ViewPager
            android:id="@+id/vpager_my_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>
