<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/vertical_match_linger">
    <RelativeLayout
            style="@style/toolbar_layout">
        <ImageView
            android:id="@+id/return_former"
            style="@style/toolbar_tools"
            android:src="@drawable/left_arraw_icon"/>
        <TextView
            style="@style/toolbar_second_title"
            android:text="@string/shopping_car_title"/>
    </RelativeLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9">
        <android.support.v7.widget.RecyclerView
                android:id="@+id/shopping_car_recycler_view"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_text_line"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <RadioButton
            android:id="@+id/choose_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:checked="false"
            android:text="@string/choose_all"/>
        <Button
            android:id="@+id/to_pay"
            android:background="@drawable/tab_login_btn"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:text="@string/calPay"/>
    </RelativeLayout>
</LinearLayout>