<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                style="@style/vertical_match_linger">
    <LinearLayout
        android:id="@+id/user_re_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <LinearLayout
            style="@style/horizontal_wrap_linger">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_icon"
                android:layout_width="@dimen/big_user_icon"
                android:layout_height="@dimen/big_user_icon"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/icon">
            </de.hdodenhof.circleimageview.CircleImageView>
            <TextView
                android:id="@+id/nickname"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="24sp"
                android:textColor="@color/white_color"
                android:text="木水先生"/>
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent">
                <Button
                    android:id="@+id/to_set_page"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/icon_set"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/horizontal_wrap_linger"
            android:layout_marginTop="24dp">
            <Button
                android:id="@+id/wish_list"
               style="@style/navigate_btn"
                android:text="@string/goods_collect"/>
            <Button
                android:id="@+id/browse_history"
                style="@style/navigate_btn"
                android:text="@string/goods_history"/>
            <Button
                android:id="@+id/grounding_manage"
                style="@style/navigate_btn"
                android:text="@string/goods_car"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@+id/my_order_layout"
        android:layout_below="@+id/user_re_layout"
        style="@style/vertical_wrap_linger"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:background="@drawable/shape_my_order">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:background="@drawable/shape_bottom_line">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black_color"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/my_order_title"/>
            <TextView
                android:id="@+id/all_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_alignParentEnd="true"
                android:text="@string/my_all_orders"/>
        </RelativeLayout>
        <LinearLayout
            style="@style/horizontal_wrap_linger"
            android:padding="4dp">
            <TextView
                android:id="@+id/wait_pay"
                android:drawableTop="@mipmap/to_pay"
                style="@style/order_info_view"
                android:text="@string/wait_pay"/>
            <TextView
                android:id="@+id/wait_send"
                android:drawableTop="@mipmap/send_product"
                style="@style/order_info_view"
                android:text="@string/wait_send"/>
            <TextView
                android:id="@+id/wait_receive"
                android:drawableTop="@mipmap/to_get_product"
                style="@style/order_info_view"
                android:text="@string/wait_receive"/>
            <TextView
                android:id="@+id/wait_remark"
                android:drawableTop="@mipmap/to_comment"
                style="@style/order_info_view"
                android:text="@string/wait_remark"/>
            <TextView
                android:id="@+id/wait_refund"
                android:drawableTop="@mipmap/to_refund"
                style="@style/order_info_view"
                android:text="@string/wait_refund"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/shape_latest_goods_order">
            <RelativeLayout
                android:id="@+id/all_orders_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_color"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/latest_news"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_alignParentEnd="true"
                    android:text="3/27"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/all_orders_title"
                android:background="@color/gray_color"
                android:paddingStart="4dp"
                android:paddingEnd="4dp">
                <ImageView
                    android:id="@+id/latest_goods_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/nav_head"
                    android:contentDescription="new orders icon"/>
                <LinearLayout
                    style="@style/vertical_wrap_linger"
                    android:layout_toEndOf="@+id/latest_goods_icon"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:background="@color/gray_color">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="已发货"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="正在等待被揽收"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_below="@+id/my_order_layout"
            style="@style/vertical_wrap_linger"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_usual_circle">
        <LinearLayout
                style="@style/horizontal_wrap_linger"
                android:padding="8dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_color"
                    android:textSize="16sp"
                    android:text="我的花费"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="0.5dp"
                      android:background="@color/gray_color"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="112dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="36sp"
                    android:textColor="@color/colorPrimary"
                    android:text="￥128"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/vertical_wrap_linger"
        android:layout_alignParentBottom="true">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/goods_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:backgroundTint="@color/colorPrimary"
            android:src="@mipmap/shopping_car">
        </android.support.design.widget.FloatingActionButton>
    </LinearLayout>
</RelativeLayout>
