<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/vertical_match_linger">
    <RelativeLayout
        style="@style/toolbar_layout">
        <ImageView
            android:id="@+id/back_frag_4"
            style="@style/toolbar_tools"
            android:src="@drawable/left_arraw_icon"/>
        <TextView
            style="@style/toolbar_second_title"
            android:text="@string/set_title"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/to_change_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="@color/white_color">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/set_user_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/icon">
        </de.hdodenhof.circleimageview.CircleImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_toEndOf="@+id/set_user_image"
            android:layout_marginStart="16dp"
            android:text="木水先生" />
        <ImageView
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/right_arraw_icon"
            android:contentDescription="1"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <RelativeLayout
            android:onClick="onClick"
            android:id="@+id/to_receive_address"
            style="@style/set_layout_style">
            <TextView
                style="@style/usual_use_textview"
                android:text="@string/receive_address_title"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginEnd="5dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/right_arraw_icon"
                android:contentDescription="1"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/to_safety"
            style="@style/set_layout_style">
            <TextView
                style="@style/usual_use_textview"
                android:text="@string/safety_toolbar_title"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginEnd="5dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/right_arraw_icon"
                android:contentDescription="1"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/to_message_model"
            style="@style/set_layout_style">
            <TextView
                style="@style/usual_use_textview"
                android:text="@string/message_inform_title"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/right_arraw_icon"
                android:contentDescription="1"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/to_usual_usage"
            style="@style/set_layout_style">
            <TextView
                style="@style/usual_use_textview"
                android:text="@string/usual_usage_title"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginEnd="5dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/right_arraw_icon"
                android:contentDescription="1"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/to_about_system"
            style="@style/set_layout_style">
            <TextView
                style="@style/usual_use_textview"
                android:text="@string/about_sys_title"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/right_arraw_icon"
                android:contentDescription="1"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/to_exit_system"
            style="@style/set_layout_style"
            android:onClick="onClick"
            android:clickable="true">
            <TextView
                style="@style/usual_use_textview"
                android:text="@string/exit_sys"/>
            <ImageView
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginEnd="5dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/right_arraw_icon"
                android:contentDescription="1"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
